Se actualiz nomrbe de la tabla a minuscula

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/bootcampquarkus
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
 quarkus.datasource.password=postgresql
-quarkus.hibernate-orm.database.generation=create
+quarkus.hibernate-orm.database.generation=update
 quarkus.rest-client."nttdata.bootcamp.quarkus.movement.client.CreditCardClient".url=http://localhost:8084
